# android-adas

./: .gitignore  CLAUDE.md  NOTICE  README.md  settings.gradle.kts
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/assets/models/: README.md
app/src/main/cpp/: CMakeLists.txt  adas_qnn.cpp
app/src/main/java/com/adasedge/app/: App.kt
app/src/main/res/drawable/: bg_control_bar.xml  ic_feed.xml  ic_launcher_background.xml  ic_launcher_foreground.xml  ic_record.xml  ic_stop.xml
app/src/main/res/layout/: activity_calibration.xml  activity_clip_library.xml  activity_disclaimer.xml  activity_driving.xml  activity_settings.xml  item_clip.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
doc/: mockup_render.py  project_draft
openspec/changes/adas-realtime-android/: design.md  proposal.md  tasks.md
openspec/changes/adas-realtime-android/research/: 01-adas-functions.md  02-perception-models.md  03-android-realtime-inference.md  04-app-architecture-libraries.md  05-speed-source-and-warning-gating.md  06-lane-fitting-dashed-lanes.md  README.md
openspec/changes/adas-realtime-android/specs/adas-perception/: spec.md
openspec/changes/adas-realtime-android/specs/collision-warning/: spec.md
openspec/changes/adas-realtime-android/specs/driver-alert-hmi/: spec.md
openspec/changes/adas-realtime-android/specs/headway-monitoring/: spec.md
openspec/changes/adas-realtime-android/specs/lane-departure-warning/: spec.md
openspec/changes/adas-realtime-android/validation/: warning-validation-2026-06-23.md
openspec/changes/archive/2026-06-22-dashcam-recording/: proposal.md  tasks.md
openspec/changes/archive/2026-06-22-lane-detector-bakeoff/: tasks.md
openspec/changes/archive/2026-06-22-twinlite-drivable-area/: README.md  tasks.md
openspec/changes/archive/2026-06-23-openpilot-inspired-lane-stability/: design.md  tasks.md
openspec/changes/clip-library-management/: design.md  proposal.md  tasks.md
openspec/changes/dashcam-recording/: design.md  tasks.md
openspec/changes/lane-detector-bakeoff/: README.md  design.md  proposal.md  tasks.md
openspec/changes/openpilot-inspired-lane-stability/: README.md  proposal.md  tasks.md
openspec/changes/openpilot-inspired-lane-stability/research/: 01-openpilot-reuse-analysis.md
openspec/changes/twinlite-drivable-area/: proposal.md  tasks.md
openspec/specs/adas-perception/: spec.md
openspec/specs/clip-library/: spec.md
openspec/specs/dashcam-recording/: spec.md
tools/: README_qnn.md  benchmark_sustained.sh  export_ufldv2.py  export_yolo11n.py  fetch_detector.sh  fetch_lane.sh  gen_context_binary.sh  gen_twinlite_calib.py  make_approach_clip.py  make_drift_clip.py  make_test_clip.py  quantize_qnn.sh  target.env  train_gtsrb.py  validate_accuracy.py  vendor_qnn_sources.sh
(+66 files in other folders)
